fix: Unsquash sprites

--- a/src/components/Sprite/Sprite.css
+++ b/src/components/Sprite/Sprite.css
@@ -1,4 +1,4 @@
 img {
-  width: 200px;
-  height: auto;
+  width: auto;
+  height: 200px;
 }
